adding games endpoint
