# server/api/controllers/games/router.js
@@ -1,0 +1,4 @@
+import * as express from 'express';
+import controller from './controller';
+
+export default express.Router().post('/', controller.create);
